Attempt to fix icon alignment

--- a/frontend/src/app/journey/journey.component.css
+++ b/frontend/src/app/journey/journey.component.css
@@ -125,8 +125,7 @@ input, :host ::ng-deep .ui-inputtext {
     text-align: center;
     font-size: 16px;
     color: black;
-    margin-bottom: 4px;
-    margin-right: .5px;
+    align-content: center;
 }
 
 #circleBackground {
