--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -17,6 +17,7 @@
 html {
     overflow-y: scroll;
     overflow-x: hidden;
+    scroll-behavior: smooth;   
 }
 
 .footer {
